# SimpleConsoleChatNetwork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  main2.cpp
chat/: CMakeLists.txt  events  events.hpp  events_handler.cpp  events_handler.hpp  shared.cpp  shared.hpp  socket.cpp  socket.hpp  synchronized_value.hpp
chat/client/: base.cpp  base.hpp  connection.cpp  connection.hpp  main.cpp  room.cpp  room.hpp  rooms.cpp  rooms.hpp  rooms_connections.cpp  rooms_connections.hpp  rooms_creation.cpp  rooms_creation.hpp  user.cpp  user.hpp
chat/helloworld_example/: client.cpp  server.cpp
chat/server/: base.cpp  base.hpp  connections.cpp  connections.hpp  main.cpp  rooms.cpp  rooms.hpp  rooms_creation.cpp  rooms_creation.hpp  users.cpp  users.hpp
chat/server/client/: base.cpp  base.hpp  connection.cpp  connection.hpp  room.cpp  room.hpp  rooms.cpp  rooms.hpp  rooms_connections.cpp  rooms_connections.hpp  rooms_creation.cpp  rooms_creation.hpp  user.cpp  user.hpp
events/: CMakeLists.txt
events/parser/: CMakeLists.txt  common.hpp  data_types.hpp  events.g4  parse.cpp  parse.hpp
events/processor/: CMakeLists.txt  processor.cpp  processor.hpp
helloworld_example/: CMakeLists.txt  client.cpp  events  server.cpp
networking/: CMakeLists.txt  socket_tcp.cpp  socket_tcp.hpp
networking/socket/: CMakeLists.txt  common.hpp  tcp.cpp  tcp.hpp
socket/: shared.hpp  socket_tcp.cpp  socket_tcp.hpp
src/client/: AsioInclude.hpp  CMakeLists.txt  CMakePresets.json  Client.cpp  Client.hpp  ConsoleCommands.hpp  ConsoleOutFormatting.hpp  main.cpp
src/client/src/: Client.cpp  Client.hpp  ConsoleCommands.hpp  ConsoleFixedSizeInput.cpp  ConsoleManager.cpp  ConsoleManager.hpp  NetworkEvents.hpp  main.cpp
src/client/src/ClientClass/: BasicClient.cpp  BasicClient.hpp  ChatClient.cpp  ChatClient.hpp  EventsClient.cpp  EventsClient.hpp
src/res/: ConsoleOutFormatting.hpp  NetworkEvents.hpp  RemoveArrayPointer.hpp  ThreadSafety.hpp
src/res/ConsoleManager/: CMakeLists.txt  ConsoleManager.cpp  ConsoleManager.hpp
src/server/: CMakeLists.txt  CMakePresets.json
src/server/src/: Client.hpp  ConsoleCommands.hpp  ConsoleFixedSizeInput.cpp  ConsoleFixedSizeInput.hpp  Server.cpp  Server.hpp  main.cpp
src/server/src/ClientSlotClass/: BasicClientSlot.cpp  BasicClientSlot.hpp  ChatClientSlot.cpp  ChatClientSlot.hpp  EventsClientSlot.cpp  EventsClientSlot.hpp
src/server/src/ServerClass/: BasicServer.cpp  BasicServer.hpp  ChatServer.cpp  ChatServer.hpp  EventsServer.cpp  EventsServer.hpp
